--- a/.github/workflows/cicd_integration_backendapp.yml
+++ b/.github/workflows/cicd_integration_backendapp.yml
@@ -34,7 +34,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Test and coverage
-        run: -m pytest --cov==. --cov-fail-under= ${{ env.COVERAGE_TOTAL }}
+        run: pytest --cov==. --cov-fail-under= ${{ env.COVERAGE_TOTAL }}
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
